<resources>
    <string name="app_name">MultiCrypto</string>
    <string name="action_settings">Settings</string>
    <string name="action_net_demo">Connection Demo</string>
    <string name="title_activity_net_log">Connection Activity Log</string>
    <string name="set_init_params">You need to set init parameters.</string>
    <string name="set_init_param_button">Set init parameters</string>
    <string name="enable_wifi_button">Enable WIFI</string>
    <string name="detect_devices_button">Detect Devices</string>
    <string name="choose_file_button">Choose File to encrypt</string>
    <string name="dialog_choose_the_option">Choose the option</string>
    <string name="dialog_encrypt_button">Encrypt</string>
    <string name="dialog_decrypt_button">Decrypt</string>
    <string name="my_files">Мои файлы</string>
    <string name="add_files">Додати</string>
    <string name="encrypt_file_button">Зашифрувати</string>
    <string name="decrypt_file_button">Розшифрувати</string>
    <string name="set_connection_button">Встановити зв\'язок</string>
    <string name="convert_file_button">Преобразовать</string>
    <string name="send_text">Надіслати</string>
</resources>