<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.borysenko.multicrypto.ui.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <TextView
        android:id="@+id/set_params_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set_init_params"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/set_init_params_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set_init_param_button"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/set_params_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/number_of_devices"
        android:layout_marginTop="@dimen/margin_10dp"/>

    <EditText
        android:id="@+id/number_of_devices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintTop_toTopOf="@id/set_init_params_button"
        app:layout_constraintStart_toEndOf="@id/set_init_params_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_10dp"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/choose_file_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_file_button"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/set_init_params_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>